--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,7 @@ p{
 	position:absolute;
 	height:16px;
 	width:16px;
-	border:solid 4px #009688;
+	border:solid 4px #22c0e8;
 	border-radius:50%;
 	left:-37px;
 	background:#FFF;
@@ -132,7 +132,7 @@ p{
 	padding:5px 20px;
 	position:relative;
 	background:#FFF;
-	border-left:solid 3px #009688;
+	border-left:solid 3px #22c0e8;
 	-webkit-box-shadow: 0 2px 6px 0 rgba(0,0,0,.2);
 	-moz-box-shadow: 0 2px 6px 0 rgba(0,0,0,.2);
 	box-shadow: 0 2px 6px 0 rgba(0,0,0,.2);
@@ -142,7 +142,7 @@ p{
 	position:absolute;
 	width:37px;
 	height:2px;
-	background:#009688;
+	background:#22c0e8;
 	left:-37px;
 	top:17px;
 	z-index:-1;
@@ -154,7 +154,7 @@ p{
 	margin:0;
 }
 .timeline > li > .timeline-content > span{
-	color:#009688;
+	color:#22c0e8;
 }
 .timeline > li > .timeline-content > p,.timeline > li > .timeline-multiple-content > p {
 	margin:0;
