--- a/css/styles.css
+++ b/css/styles.css
@@ -22,8 +22,18 @@ body{
   margin-left: 10px
 }
 
+.two-buttons{
+  margin-bottom:25px;
+}
+
 .two-buttons a{
   margin-right:10px
+}
+
+img{
+  float:left;
+  width:100%;
+  height:350px;
 }
 
 /* .one-button{
@@ -66,6 +76,10 @@ body{
   -webkit-box-shadow: 0 2px 6px 0 rgba(0,0,0,.2);
 	-moz-box-shadow: 0 2px 6px 0 rgba(0,0,0,.2);
 	box-shadow: 0 2px 6px 0 rgba(0,0,0,.2);
+}
+
+.menu-items{
+  width:250px;
 }
 
 .menu{
@@ -173,4 +187,21 @@ body{
     position: relative;
     text-decoration: none;
     transition: all 0s;
+  }
+
+  @media screen and (max-width:768px){
+    .menu{
+      width:100%;
+      position:relative;
+    }
+    .menu-items{
+      width:100%;
+    }
+    #div1{
+      margin-left:0px;
+    }
+    img{
+      width:100%;
+      height:350px;
+    }
   }
